@@ -1,5 +1,5 @@
  Name:         pragmatic-infiniband-utilities
  Version:      1.0.5
- Release:      1
+ Release:      2
  Author:       Ira Weiny weiny2@llnl.gov
 
