@@ -5,4 +5,5 @@ IBSRP_NUM_TARGETS=1
 
 # Timeouts for scripts
 SRP_SETTLE_TIMEOUT=1
+OPENSM_SETTLE_TIMEOUT=1
 
